# openCV_Test

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/exexample/opencvandar/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/exexample/opencvandar/: GestureActivity.java  ImageActivity.java  ImageManipulationsActivity.java  MainActivity.java  NdkLoader.java  VideoActivity.java
app/src/main/java/com/exexample/opencvandar/alljoy/: BasicInterface.java
app/src/main/jni/: native-lib.cpp
app/src/main/res/layout/: activity_image.xml  activity_main_layout.xml  activity_video_layout.xml  image_manipulations_surface_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/exexample/opencvandar/: ExampleUnitTest.java
openCVLibrary310/: build.gradle
